; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/marvell/mwifiex/extr_cfg80211.c_mwifiex_cfg80211_cancel_remain_on_channel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/marvell/mwifiex/extr_cfg80211.c_mwifiex_cfg80211_cancel_remain_on_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wiphy = type { i32 }
%struct.wireless_dev = type { i32 }
%struct.mwifiex_private = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i32 }

@ENOENT = common dso_local global i32 0, align 4
@HostCmd_ACT_GEN_REMOVE = common dso_local global i32 0, align 4
@GFP_ATOMIC = common dso_local global i32 0, align 4
@INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"info: cancel ROC, cookie = 0x%llx\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wiphy*, %struct.wireless_dev*, i64)* @mwifiex_cfg80211_cancel_remain_on_channel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mwifiex_cfg80211_cancel_remain_on_channel(%struct.wiphy* %0, %struct.wireless_dev* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.wiphy*, align 8
  %6 = alloca %struct.wireless_dev*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.mwifiex_private*, align 8
  %9 = alloca i32, align 4
  store %struct.wiphy* %0, %struct.wiphy** %5, align 8
  store %struct.wireless_dev* %1, %struct.wireless_dev** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load %struct.wireless_dev*, %struct.wireless_dev** %6, align 8
  %11 = getelementptr inbounds %struct.wireless_dev, %struct.wireless_dev* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call %struct.mwifiex_private* @mwifiex_netdev_get_priv(i32 %12)
  store %struct.mwifiex_private* %13, %struct.mwifiex_private** %8, align 8
  %14 = load i64, i64* %7, align 8
  %15 = load %struct.mwifiex_private*, %struct.mwifiex_private** %8, align 8
  %16 = getelementptr inbounds %struct.mwifiex_private, %struct.mwifiex_private* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %14, %18
  br i1 %19, label %20, label %23

20:                                               ; preds = %3
  %21 = load i32, i32* @ENOENT, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %4, align 4
  br label %51

23:                                               ; preds = %3
  %24 = load %struct.mwifiex_private*, %struct.mwifiex_private** %8, align 8
  %25 = load i32, i32* @HostCmd_ACT_GEN_REMOVE, align 4
  %26 = load %struct.mwifiex_private*, %struct.mwifiex_private** %8, align 8
  %27 = getelementptr inbounds %struct.mwifiex_private, %struct.mwifiex_private* %26, i32 0, i32 1
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 1
  %29 = call i32 @mwifiex_remain_on_chan_cfg(%struct.mwifiex_private* %24, i32 %25, i32* %28, i32 0)
  store i32 %29, i32* %9, align 4
  %30 = load i32, i32* %9, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %49, label %32

32:                                               ; preds = %23
  %33 = load %struct.wireless_dev*, %struct.wireless_dev** %6, align 8
  %34 = load i64, i64* %7, align 8
  %35 = load %struct.mwifiex_private*, %struct.mwifiex_private** %8, align 8
  %36 = getelementptr inbounds %struct.mwifiex_private, %struct.mwifiex_private* %35, i32 0, i32 1
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 1
  %38 = load i32, i32* @GFP_ATOMIC, align 4
  %39 = call i32 @cfg80211_remain_on_channel_expired(%struct.wireless_dev* %33, i64 %34, i32* %37, i32 %38)
  %40 = load %struct.mwifiex_private*, %struct.mwifiex_private** %8, align 8
  %41 = getelementptr inbounds %struct.mwifiex_private, %struct.mwifiex_private* %40, i32 0, i32 1
  %42 = call i32 @memset(%struct.TYPE_2__* %41, i32 0, i32 4)
  %43 = load %struct.mwifiex_private*, %struct.mwifiex_private** %8, align 8
  %44 = getelementptr inbounds %struct.mwifiex_private, %struct.mwifiex_private* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 8
  %46 = load i32, i32* @INFO, align 4
  %47 = load i64, i64* %7, align 8
  %48 = call i32 @mwifiex_dbg(i32 %45, i32 %46, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i64 %47)
  br label %49

49:                                               ; preds = %32, %23
  %50 = load i32, i32* %9, align 4
  store i32 %50, i32* %4, align 4
  br label %51

51:                                               ; preds = %49, %20
  %52 = load i32, i32* %4, align 4
  ret i32 %52
}

declare dso_local %struct.mwifiex_private* @mwifiex_netdev_get_priv(i32) #1

declare dso_local i32 @mwifiex_remain_on_chan_cfg(%struct.mwifiex_private*, i32, i32*, i32) #1

declare dso_local i32 @cfg80211_remain_on_channel_expired(%struct.wireless_dev*, i64, i32*, i32) #1

declare dso_local i32 @memset(%struct.TYPE_2__*, i32, i32) #1

declare dso_local i32 @mwifiex_dbg(i32, i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
